third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/inline-parity/shadowing_renamed_param.exp

Diagnostics:
error: captured variable `x` cannot be modified inside of a lambda
   ┌─ tests/checking-lang-v2.2/lambda/inline-parity/shadowing_renamed_param.move:15:13
   │
15 │             x = y  // We expect this to assign 3 via foo if renaming works correctly. If not it would
   │             ^

error: captured variable `x` cannot be modified inside of a lambda
   ┌─ tests/checking-lang-v2.2/lambda/inline-parity/shadowing_renamed_param.move:21:13
   │
21 │             x = y  // We expect this to assign 3 via foo if renaming works correctly. If not it would
   │             ^

error: captured variable `x` cannot be modified inside of a lambda
   ┌─ tests/checking-lang-v2.2/lambda/inline-parity/shadowing_renamed_param.move:30:13
   │
30 │             x = y  // We expect this to assign 3 via foo if renaming works correctly. If not it would
   │             ^

error: captured variable `x` cannot be modified inside of a lambda
   ┌─ tests/checking-lang-v2.2/lambda/inline-parity/shadowing_renamed_param.move:36:13
   │
36 │             x = y  // We expect this to assign 3 via foo if renaming works correctly. If not it would
   │             ^
